# alltrader

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  create_api.ps1
.github/workflows/: check.yml  clippy.yml  format.yml  release.yml  tests.yml
trader/: Cargo.toml
trader/src/: app.rs  backend.rs  config.rs  gamedata.rs  main.rs  parse_system.rs  utils.rs
trader/src/windows/: agent.rs  auth.rs  contract_info.rs  contracts.rs  mod.rs  ship_info.rs  ships.rs  status.rs  world_explorer.rs
