[package]
name = "trader"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = {version = "1", features = ["full"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
colored = "2.0.0"
image = "0.24"
chrono = "0.4.24"
spacedust = "1.0.5"
eframe = {version = "0.21.3", features = ["persistence"]}
egui = "0.21.0"
serde = {version = "1", features = ["derive"]}
