[package]
name = "trader"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = {version = "1", features = ["full"]}
futures = "0.3"
spacedust = "1.0.6"
eframe = {version = "0.21", features = ["persistence"]}
egui = "0.21"
serde = {version = "1", features = ["derive"]}
rust-ini = "0.19.0"
serde_json = "1.0"
image = "0.24.6"
